# Myopia

./: .gitignore  CHANGELOG.md  Myopia.cabal  README.md  cabal.project  cabal.project.freeze  flake.nix  fourmolu.yaml  hie.yaml  myopia.cabal
.github/workflows/: tests.yaml
app/: Main.hs
graphics/: graphics.cabal
graphics/src/Graphics/: SDL.hs
graphics/src/Graphics/SDL/: Interact.hs
graphics/src/Graphics/SDL/Data/: Color.hs  Event.hs  Input.hs  Picture.hs  Window.hs
graphics/src/Graphics/SDL/Internal/: DrawState.hs  Interact.hs  Render.hs
lib/: Wrapper.hs  graphics.cabal
lib/Graphics/: SDL.hs
lib/Graphics/SDL/Data/: Color.hs  Input.hs  Picture.hs  Window.hs
lib/Graphics/SDL/Internal/: DrawState.hs  Interact.hs  Render.hs
lib/src/Graphics/: SDL.hs
lib/src/Graphics/SDL/: Interact.hs
lib/src/Graphics/SDL/Data/: Color.hs  Event.hs  Input.hs  Picture.hs  Window.hs
lib/src/Graphics/SDL/Internal/: DrawState.hs  Interact.hs  Render.hs
nix/overlays/alejandra/: default.nix  remove-ads.patch
src/: Myopia.hs
src/Myopia/: Draw.hs  Event.hs  GameState.hs  QuadTree.hs  Util.hs
src/Myopia/Draw/: Drawable.hs
src/Myopia/QuadTree/: Internal.hs  Tree.hs
src/Myopia/State/: Entity.hs  Game.hs  Player.hs  Room.hs  Tree.hs  Type.hs
src/Myopia/State/Entity/: Mob.hs  Player.hs
test/src/: Main.hs
test/src/Test/: QuadTree.hs  Types.hs
