cabal-version:       3.0
category:            Game
name:                Myopia
version:             0.1.0.0
synopsis:            Small rogue lite game built using SDL
description:
  Please see the README on GitHub at <https://github.com/skykanin/myopia#readme>
homepage:            https://github.com/skykanin/myopia
bug-reports:         https://github.com/skykanin/myopia/issues
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              skykanin
maintainer:          3789764+skykanin@users.noreply.github.com
copyright:           skykanin
build-type:          Simple
tested-with:         GHC == 8.10.4
extra-source-files:  README.md

common shared-properties
  default-language: Haskell2010
  default-extensions: OverloadedStrings

executable myopia
  import:              shared-properties
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base ^>= 4.14.1.0
                     , myopia-lib
  ghc-options:         -Wall -O2 

-- The game itself exposed as a library to be used in the executable
library myopia-lib
  import:              shared-properties
  exposed-modules:     Myopia
                     , Myopia.Draw
                     , Myopia.Event
                     , Myopia.State.Game
                     , Myopia.State.Player
                     , Myopia.State.Type
  build-depends:       base ^>= 4.14.1.0
                     , containers ^>= 0.6.4.1
                     , lens ^>= 5.0.1
                     , random ^>= 1.2.0
                     , sdl2-gfx
                     , graphics-sdl
                     , text ^>= 1.2.4.1
  hs-source-dirs:      src, src/Myopia
  ghc-options:         -Wall -Wredundant-constraints -Wno-name-shadowing -Wno-unticked-promoted-constructors

-- The library providing drawing and rendering abstractions over SDL2
library graphics-sdl
  import:              shared-properties
  exposed-modules:     Graphics.SDL
                     , Graphics.SDL.Data.Color
                     , Graphics.SDL.Data.Event
                     , Graphics.SDL.Data.Input
                     , Graphics.SDL.Data.Picture
                     , Graphics.SDL.Data.Window
                     , Graphics.SDL.Interact

  other-modules:       Graphics.SDL.Internal.Render
                     , Graphics.SDL.Internal.DrawState
                     , Graphics.SDL.Internal.Interact

  build-depends:       base ^>= 4.14.1.0
                     , containers ^>= 0.6.4.1
                     , lens ^>= 5.0.1
                     , sdl2 ^>= 2.5.3.0
                     , sdl2-image ^>= 2.0.0
                     , sdl2-gfx
                     , text ^>= 1.2.4.1
                     , transformers ^>= 0.5.6.2
                     , unordered-containers ^>= 0.2.13.0
                     , vector ^>= 0.12.2.0
  hs-source-dirs:      lib
  ghc-options:         -Wall -Wredundant-constraints -Wno-name-shadowing -Wno-unticked-promoted-constructors
